добавлены чаты проектов

--- a/client/images.qrc
+++ b/client/images.qrc
@@ -4,5 +4,6 @@
         <file>img/project.png</file>
         <file>img/chat.png</file>
         <file>img/settings.png</file>
+        <file>img/MessLess.ico</file>
     </qresource>
 </RCC>
